<resources>
    <string name="app_name">Travel Guide App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="Show_Location">Konum Göster</string>
    <string name="Add_Visitation">Ziyaret Ekle</string>
    <string name="add_location">Konum Ekle</string>
    <string name="edt_place_name">Yer adı giriniz (zorunlu)</string>
    <string name="edt_definition_hint">Tanım bilgisi giriniz (opsiyonel)</string>
    <string name="edt_description_hint">Kısa açıklama giriniz (zorunlu)</string>
    <string name="tw_definition_text">Yer Kısa Tanım</string>
    <string name="tw_description_text">Kısa Açıklama</string>
    <string name="visit_date_text">12.10.2020</string>
    <string name="edt_desc_hint">Açıklama</string>
    <string name="tw_visit_date_text">Ziyaret Tarihi</string>
    <string name="visit_desc_text">Ziyaret Açıklaması</string>
    <string name="app_name_lined">Gezi\nRehberim</string>
    <string name="save">kaydet</string>
    <string name="go">git</string>
    <string name="tab_image">tab image</string>
    <string name="Save">Kaydet</string>
    <string name="str_places_to_visit">Gezilecekler</string>
    <string name="str_visited_places">Gezdiklerim</string>
    <string name="please_fill_all_the_fields">Lütfen tüm alanları doldurunuz.</string>
    <string name="text_priority">Öncelik</string>
    <string name="LOCATION">KONUM</string>
    <string name="add_place_fragment_choose_location_confirmation">Konum bilgisi girilmedi. Şimdi konum seçmek için onaylayınız.</string>
    <string name="Confirm">Onayla</string>
    <string name="No">Hayır</string>
    <string name="visited_places">Gezdiklerim</string>
    <string name="places_to_visit">Gezilecekler</string>
    <string name="Location_Name">Yer Adı</string>
    <string name="Add_Place">Yer Ekle</string>
    <string name="This_field_cannot_be_empty">Bu alan boş kalamaz</string>
    <string name="place_added_successfuly">Konum başarıyla eklendi!</string>
    <string name="Place_short_description">Yer kısa tanım</string>
    <string name="Brief_description_max_3_lines">Kısa açıklama en fazla 3 satır</string>
    <string name="Visitation_History">Ziyaret Geçmiş</string>
    <string name="Place__brief_definition">Yer kısa tanım</string>
    <string name="Brief_place_definition">Yer kısa tanım bilgisi</string>
    <string name="PLACEHOLDER_date">12.10.200</string>
    <string name="function_not_implemented">Function not implemented!</string>
    <string name="Choose_Priority">Öncelik Seç</string>
    <string name="Priority_1">Öncelik 1</string>
    <string name="Priority_2">Öncelik 2</string>
    <string name="Priority_3">Öncelik 3</string>
</resources>