<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.PlaceDetailsFragment"
    android:background="#E5E5E5"
    >


    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:ci_drawable="@drawable/blue_radius"
        app:ci_drawable_unselected="@drawable/white_radius"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </me.relex.circleindicator.CircleIndicator3>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


    </androidx.viewpager2.widget.ViewPager2>

    <TextView
        android:id="@+id/tvPhotoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/text_background"
        android:padding="6dp"
        android:text="@string/PLACEHOLDER_date"
        android:textAlignment="center"
        android:textColor="#4B4848"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/text_background"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/text_priority"
        android:textColor="#4B4848"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager2"
        tools:ignore="RtlSymmetry,SmallSp" />

    <ImageView
        android:id="@+id/imageViewPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/rv_oval_item_blue"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriority"
        app:layout_constraintEnd_toEndOf="@+id/tvPriority"
        app:layout_constraintTop_toTopOf="@+id/tvPriority"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddVisitation"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/Add_Visitation"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager2"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddVisitation">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:text="@string/Place__brief_definition"
            android:textColor="#4B4848"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvDefinition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            android:text="@string/Brief_place_definition"
            android:textColor="#9E9E9E"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShowLocation"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/blue_button_background"
            android:padding="2dp"
            android:text="@string/Show_Location"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/tvShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:text="@string/Place_short_description"
            android:textColor="#4B4848"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvShortDescriptionMax3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="45dp"
            android:maxLines="3"
            android:text="@string/Brief_description_max_3_lines"
            android:textColor="#9E9E9E"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShortDescription"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:text="@string/Visitation_History"
        android:textColor="#4B4848"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVisitHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>